Fix overlapping label and error message

--- a/src/Components/Forms/OrgForm.scss
+++ b/src/Components/Forms/OrgForm.scss
@@ -5,7 +5,7 @@
     grid-template-rows: 2fr 2fr 0.5fr 1fr;
     padding: 15px;
     display: grid;
-    height: 240px;
+    height: 255px;
     width: 350px;
 
     @include hidden-form(5px, 0.1s);
